--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -1,9 +1,9 @@
 [id="Vmware_to_osp_workflow"]
-= VMware to Red Hat OpenStack platform workflow
+= VMware to Red Hat OpenStack Platform workflow
 
-his workflow describes the process of migrating  from VMware to Red Hat OpenStack Platform.
+This workflow describes the process of migrating  from VMware to Red Hat OpenStack Platform.
 
-*This image is a placeholder. The storage label will be `Block storage`. `Conversion appliance` will change to `Conversion host`.*
+Interim version. RHV cluster and placement of conversion hosts will be corrected.
 
 image:vmware_to_osp_migration_workflow.png[]
 
