--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_ssh_transformation.adoc
@@ -1,6 +1,8 @@
 [id="Configuring_conversion_hosts_for_ssh_transformation"]
 = Configuring conversion hosts for SSH transformation
 
+.Red Hat Virtualization
+
 . On the Manager machine, create +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+ with the following variables:
 +
 [options="nowrap" subs="+quotes,verbatim"]
@@ -22,7 +24,7 @@ all:
 +
 [NOTE]
 ====
-Red Hat Virtualization only: The link:https://github.com/oVirt/ovirt-ansible-v2v-conversion-host[`ovirt-ansible-v2v-conversion-host`] role checks for the presence of the RHV guest tools ISO image in the ISO storage domain. This image is used to migrate Windows virtual machines.
+The link:https://github.com/oVirt/ovirt-ansible-v2v-conversion-host[`ovirt-ansible-v2v-conversion-host`] role checks for the presence of the RHV guest tools ISO image in the ISO storage domain. This image is used to migrate Windows virtual machines.
 ====
 
 . Verify that the conversion hosts are enabled:
@@ -77,3 +79,7 @@ If you are using SSSD with single sign-on, see xref:SSH_transformation_fails[Tro
 ====
 
 After creating the conversion hosts, you can xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
+
+.OpenStack Platform
+
+*TBD*
