--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_vddk_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_vddk_transformation.adoc
@@ -7,6 +7,8 @@
 
 . Download the SDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
 
+.Red Hat Virtualization
+
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine.
 
 . On the Manager machine, create  +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+ with the following variables:
@@ -46,5 +48,11 @@ The link:https://github.com/oVirt/ovirt-ansible-v2v-conversion-host[`ovirt-ansib
 ====
 If you upgrade your target environment, you must run the `conversion_host_enable` playbook again, with the option `-e v2v_vddk_override=true`, to update the IMS packages.
 ====
+
+After configuring the conversion hosts, you can xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
+
+.OpenStack Platform
+
+TBD
 
 After configuring the conversion hosts, you can xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
