--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -13,6 +13,8 @@ To prepare the OpenStack Platform environment for migration:
 
 . Create a project for the conversion hosts and whatever projects you require for the target instances.
 
+. Ensure that the user configured in CloudForms for the OpenStack Platform provider has `administrator` privileges on the target projects.
+
 . Configure security groups:
 * A security group for the conversion hosts and CloudForms must have port 22 (SSH) enabled.
 * A security group for CloudForms must have port 443 (HTTPS) enabled.
