conv host reorg

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -1,5 +1,5 @@
 [id="Preparing_the_conversion_hosts"]
-= Preparing the conversion hosts
+= Conversion hosts
 
 Before you create the conversion hosts, you must decide xref:Number_of_conversion_hosts[how many conversion hosts] to create and whether to use xref:datapath_transformation_options_vddk_ssh[VDDK or SSH] transformation.
 
