--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -1,26 +1,26 @@
 [id="Creating_conversion_hosts"]
 = Creating conversion hosts
 
-.Red Hat Virtualization
+If you are migrating to Red Hat Virtualization:
 
-. Select one or more hosts in your Red Hat Virtualization environment to use as conversion hosts.
-. Configure each conversion host for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
+. Select one or more existing hosts to use as conversion hosts.
+. Ensure that the conversion hosts have names that identify them as conversion hosts.
 
-.OpenStack Platform
+If you are migrating to OpenStack Platform:
 
-. Download the OpenStack Platform conversion appliance.
-. Upload the OpenStack Platform conversion appliance to Glance storage.
-. Deploy the conversion appliance as an instance (conversion host).
+. Download the OpenStack Platform conversion appliance from _TBD_.
+. Upload the appliance to Glance storage.
+. Deploy the conversion appliance as an instance (conversion host) for as many hosts as you require, with names that identify them as conversion hosts.
 +
 [NOTE]
 ====
-The conversion host has the following requirements:
+An OpenStack Platform conversion host has the following requirements:
 
 * 4 vCPUs
 * 8 GB RAM
-* /tmp (1 GB for each conversion)
-* /var/tmp (1 GB for each conversion)
-* /var/logs (5 GB)
+* `/tmp` (1 GB for each conversion)
+* `/var/tmp` (1 GB for each conversion)
+* `/var/logs` (5 GB)
 ====
 
-. Configure each conversion host for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
+You are ready to configure the conversion hosts for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
